renamed gaph class

--- a/data/aemet_ingest_and_eda.ipynb
+++ b/data/aemet_ingest_and_eda.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "532fc458",
    "metadata": {},
    "outputs": [
@@ -56,11 +56,11 @@
     }
    ],
    "source": [
-    "from LocalityGraph import LocalityGraph\n",
+    "from data.LocationGraph import LocationGraph\n",
     "\n",
-    "# localities: list of dicts you provided (one example per locality)\n",
-    "lg = LocalityGraph.from_list(localities, app_logger)\n",
-    "# build graph with 10 km threshold (uses BallTree if sklearn installed)\n",
+    "# localities: list of dicts (one example per locality)\n",
+    "lg = LocationGraph.from_list(localities, app_logger)\n",
+    "# build graph with 10 km threshold\n",
     "lg.build_graph(max_km=10.0)\n",
     "\n",
     "# quick QC\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9eaf405e",
    "metadata": {},
    "outputs": [
@@ -123,11 +123,22 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
     "# localities: list of dicts you provided (one example per locality)\n",
-    "sg = LocalityGraph.from_list(stations, app_logger)\n",
+    "sg = LocationGraph.from_list(stations, app_logger)\n",
     "# build graph with 10 km threshold (uses BallTree if sklearn installed)\n",
     "sg.build_graph(max_km=50)\n",
     "\n",
